dartdoc_test/test/testdata/run analyze command by default with verbose flag.txt
$ dart run bin/dartdoc_test.dart -v
Extracting code samples ...
Analyzing code samples ...
original error: .dartdoc_test/error_example_0.dart:5:27: Expected to find ';'.
example/lib/error_example.dart:17:29: : Expected to find ';'.
   ╷
17 │ /// final fact = factorial(5)
   │                             ^
   ╵

original error: .dartdoc_test/error_example_1.dart:5:24: Local variable 'isPalindrome' can't be referenced before it is declared.
example/lib/error_example.dart:31:11: : Local variable 'isPalindrome' can't be referenced before it is declared.
   ╷
31 │ /// final isPalindrome = isPalindrome('A man, a plan, a canal, Panama');
   │           ^^^^^^^^^^^^
   ╵

.dartdoc_test/error_example_1.dart:2:8: Unused import: '../example/lib/error_example.dart'. (ignored because issue occurs in the generated code)
original error: .dartdoc_test/error_example_2.dart:5:15: Local variable 'gcd' can't be referenced before it is declared.
example/lib/error_example.dart:39:36: : Local variable 'gcd' can't be referenced before it is declared.
   ╷
39 │ /// Should return: Local variable 'gcd' can't be referenced before it is declared.
   │                                    ^^^
   ╵

.dartdoc_test/error_example_2.dart:2:8: Unused import: '../example/lib/error_example.dart'. (ignored because issue occurs in the generated code)
original error: .dartdoc_test/error_example_3.dart:5:20: The getter 'length' isn't defined for the type 'int'.
example/lib/error_example.dart:53:32: : The getter 'length' isn't defined for the type 'int'.
   ╷
53 │ /// Should return: The getter 'length' isn't defined for the class 'int'.
   │                                ^^^^^^
   ╵

.dartdoc_test/error_example_3.dart:2:8: Unused import: '../example/lib/error_example.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_0.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_1.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_2.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_3.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:2:8: Unused import: 'dart:io'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:3:8: Unused import: 'package:path/path.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:4:8: Unused import: 'package:analyzer/dart/analysis/results.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:5:8: Unused import: 'package:analyzer/dart/ast/ast.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:6:8: Unused import: 'package:analyzer/dart/ast/visitor.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:7:8: Unused import: 'package:markdown/markdown.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:8:8: Unused import: 'package:source_span/source_span.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:2:8: Unused import: 'dart:io'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:3:8: Unused import: 'package:path/path.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:4:8: Unused import: 'package:analyzer/dart/analysis/results.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:5:8: Unused import: 'package:analyzer/dart/ast/ast.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:6:8: Unused import: 'package:analyzer/dart/ast/visitor.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:7:8: Unused import: 'package:markdown/markdown.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:8:8: Unused import: 'package:source_span/source_span.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:1:8: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:2:8: Unused import: 'dart:io'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:3:8: Unused import: 'package:path/path.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:4:8: Unused import: 'package:analyzer/dart/analysis/results.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:5:8: Unused import: 'package:analyzer/dart/ast/ast.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:6:8: Unused import: 'package:analyzer/dart/ast/visitor.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:7:8: Unused import: 'package:markdown/markdown.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_2.dart:8:8: Unused import: 'package:source_span/source_span.dart'. (ignored because issue occurs in the generated code)
FAILED: 4 issues found (Found 11 code samples in 3 files)